# squeekboard-sway

./: .gitlab-ci.yml  AUTHORS  Cargo.deps  Cargo.deps.legacy  Cargo.toml  Cargo.toml.in  HACKING.md  Makefile.am  README.md  autogen.sh  cargo.sh  cargo_build.sh  dco.txt  meson.build  meson_options.txt  squeekboard.doap
data/: meson.build  popup.ui  sm.puri.Squeekboard.desktop.in  sm.puri.Squeekboard.desktop.in.in  squeekboard.gresources.xml  style-Adwaita:dark.css  style.css
data/dbus/: sm.puri.OSK0.xml
data/keyboards/: br.yaml  de.yaml  de_wide.yaml  dk.yaml  el.yaml  emoji.yaml  es.yaml  fi.yaml  fr.yaml  gr.yaml  it.yaml  ja+kana.yaml  jp+kana.yaml  jp+kana_wide.yaml  keyboards.xml  nb.yaml  no.yaml  number.yaml  pl.yaml  pl_wide.yaml  ru.yaml  se.yaml  terminal.yaml  us.yaml  us_wide.yaml
data/keyboards/geometry/: compact.xml  extended.xml  number-keypad.xml  numbers-keypad.xml
data/keyboards/keymaps/: nb.xkb  numbers.xkb  us.xkb
data/keyboards/symbols/: nb.xml  us.xml
data/keyboards/symbols/special/: number.xml  numbers.xml
data/langs/: de-DE.txt  en-US.txt  es-ES.txt  ja-JP.txt  pl-PL.txt  ru-RU.txt
data/themes/: default.css
debian/: changelog  check_release.py  control  copyright  rules  squeekboard-devel.install  squeekboard.install  squeekboard.lintian-overrides
debian/cargo/: config
doc/: build.sh  conf.py  hacking.md  index.md  tutorial.md
eek/: eek-container.c  eek-container.h  eek-element.c  eek-element.h  eek-gtk-keyboard.c  eek-gtk-keyboard.h  eek-gtk-renderer.c  eek-gtk-renderer.h  eek-key.c  eek-key.h  eek-keyboard-drawing.c  eek-keyboard.c  eek-keyboard.h  eek-keysym.c  eek-keysym.h  eek-layout.c  eek-layout.h  eek-marshalers.list  eek-renderer.c  eek-renderer.h  eek-section.c  eek-section.h  eek-serializable.c  eek-symbol-matrix.c  eek-symbol.c  eek-symbol.h  eek-text.c  eek-text.h  eek-theme-context.c  eek-theme-node.c  eek-theme.c  eek-types.c  eek-types.h  eek-xkb-layout.c  eek-xkb-layout.h  eek-xkl-layout.c  eek-xkl-layout.h  eek-xml-layout.c  eek-xml-layout.h  eek-xml.c  (+8 more)
eekboard/: eekboard-client.c  eekboard-client.h  eekboard-context-service.c  eekboard-context-service.h  eekboard-context.c  eekboard-context.h  eekboard-service.c  eekboard-service.h  key-emitter.c  key-emitter.h  keymap.c  keymap.h
examples/: test_layout.rs
po/: meson.build
protocols/: input-method-unstable-v2.xml  meson.build
src/: Makefile.am  action.rs  bitflags.rs  client-main.c  client.c  client.h  config.h.in  data.rs  dbus.c  dbus.h  drawing.rs  float_ord.rs  imservice.c  imservice.h  imservice.rs  keyboard.h  keyboard.rs  layout.h  layout.rs  lib.rs  locale.rs  locale_config.rs  logging.rs  manager.rs  meson.build  outputs.h  outputs.rs  popover.h  popover.rs  resources.rs  server-context-service.c  server-context-service.h  server-main.c  server-service.c  squeekboard.gresources.xml  style.css  style.h  style.rs  submission.h  submission.rs  (+10 more)
tests/: eek-simple-test.c  eek-xml-test.c  entry.py  layout.yaml  layout2.yaml  layout3.yaml  layout_key1.yaml  layout_key2.yaml  layout_key3.yaml  layout_margins.yaml  meson.build  test-keymap-generation.c
tools/: entry.py  meson.build  squeekboard-restyled  squeekboard.in
