[package]
name = "rs"
version = "0.1.0"

[dependencies]
bitflags = "1.0.*"
maplit = "1.0.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = "0.8.*"
xkbcommon = { version = "0.4.*", features = ["wayland"] }

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]

[dependencies.glib-sys]
version = ""
features = ["v2_44"]


[dependencies.gtk]
version = "0.5.*"
features = ["v3_22"]

[dependencies.gtk-sys]
version = ""
features = ["v3_22"]


[lib]
name = "rs"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]
